# sentinel-ai

./: .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  ARCHITECTURE_TEST_TASKS.md  ASM-COMPLETE-SUMMARY.md  ASM-IMPLEMENTATION-STATUS.md  BUILD_FIX_SUMMARY.md  CHUNK_ORDER_FIX.md  CLAUDE.md  GEMINI_PROXY_FIX.md  HTTP_GATEWAY_DESIGN.md  LICENSE  LLM_COMPILER_LOOP_FIX.md  MCP_BROWSER_CONNECTION_FIX.md  MCP_CONNECTION_FIX_SUMMARY.md  PASSIVE_SCAN_REFACTOR.md  PROJECT_STATUS.md  PROXY_FIX_SUMMARY.md  QUICK_TEST.md  README.md  SIGHUP_PANIC_FIX_SUMMARY.md  START_PASSIVE_SCAN_FIX.md  TASK_CANCELLATION_ANALYSIS.md  TASK_CANCELLATION_FIXED.md  TESTING_GUIDE.md  article_content.txt  cert.conf  cert.p12  cert.pem  dummy_app  exploit.py  glm_owasp_2025.json  key.pem  localhost:5432  localhost:5432-shm  localhost:5432-wal  migration.sh  package-lock.json  package.json  (+23 more)
src-tauri/: Cargo.toml  MODULARIZATION_SUMMARY.md  build.rs  check-errors.txt  check_errors.txt  check_errors_v2.txt  check_errors_v3.txt  check_errors_v4.txt  check_errors_v5.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_main.txt  check_output_services.txt  license_keys.json  patch_orchestrator.rs  tauri.conf.json  test_cert_regenerate.sh  test_db_init.sh  test_migration.sh  test_passive_mcp_tools.sh  test_rsubdomain.rs
src-tauri/.zed/: debug.json
src-tauri/agent-browser/: package-lock.json  package.json
src-tauri/agent-browser/src/: actions.ts  browser.test.ts  browser.ts  daemon.ts  protocol.ts  stream-server.ts
src-tauri/ca/: root-ca.key  root-ca.pem
src-tauri/capabilities/: default.json
src-tauri/crates/sentinel-agents/: Cargo.toml
src-tauri/crates/sentinel-app/: Cargo.toml  tauri.conf.json
src-tauri/crates/sentinel-commands/: Cargo.toml
src-tauri/crates/sentinel-core/: Cargo.toml
src-tauri/crates/sentinel-database/: Cargo.toml
src-tauri/crates/sentinel-db/: Cargo.toml
src-tauri/crates/sentinel-engines/: Cargo.toml
src-tauri/crates/sentinel-models/: Cargo.toml
src-tauri/crates/sentinel-prompt/: Cargo.toml
src-tauri/crates/sentinel-rag/: Cargo.toml
src-tauri/crates/sentinel-services/: Cargo.toml
src-tauri/crates/sentinel-tools/: Cargo.toml
src-tauri/doc/: database_migration_guide.md  debug_trait_fixes.md  plugin_registry_implementation.md  plugin_registry_migration.md
src-tauri/docs/: DYNAMIC_TOOL_MIGRATION.md  ai_adapter_refactor_plan.md  conditional_step_examples.md  content_toolresult_interleaving_fix.md  http_request_error_handling.md  port_scanner.md  toolresult_status_fix.md
src-tauri/examples/: port_scanner_test.rs
src-tauri/icons/: icon.icns
src-tauri/logs/: sentinel-ai.log.2026-02-05
src-tauri/macos-extension/: MainApp.entitlements  Package.swift  README.md  SETUP.md  build.sh
src-tauri/macos-extension/SentinelProxy/: Info.plist  SentinelProxy.entitlements  TransparentProxyProvider.swift  main.swift
src-tauri/macos-extension/SentinelProxyManager/: CInterface.swift  ExtensionManager.swift
src-tauri/migrations/: 20241220_create_scan_tables.sql  20241220_plan_execute_architecture.sql  20241221_create_asset_tables.sql  20241223_enhanced_architecture.sql  20241224_mcp_server_state.sql  20241224_prompt_groups.sql  20250116_create_rag_tables.sql  20250916_enhance_prompt_templates.sql
src-tauri/prompts/: agent_fix.md  agent_gen.md  agent_plugin.md  orchestrator_execution.md  orchestrator_planning.md  passive_fix.md  passive_gen.md  passive_inter.md  passive_output.md  passive_plugin.md  react_execution.md  react_planning.md  react_system.md  react_system_v2.md  travel_dag_planner.md
src-tauri/prompts/toolsprompt/: claude_code_2.0.md
src-tauri/prompts/travel/: act.md  dag_plan.md  decide.md  observe.md  orient.md  prompt.md  replan.md
src-tauri/roles/: README.md  ctfer-base.md  ctfer-sqli.md  ctfer-upload.md  ctfer.md
src-tauri/sentinel-bounty/: Cargo.toml
src-tauri/sentinel-bounty/src/: error.rs  lib.rs
src-tauri/sentinel-commands/: Cargo.toml
src-tauri/sentinel-core/: Cargo.toml
src-tauri/sentinel-core/src/: ai_service.rs  ai_service_trait.rs  chunk_type.rs  database.rs  global_proxy.rs  lib.rs  prompt_resolver.rs  scheduler.rs
src-tauri/sentinel-db/: Cargo.toml
src-tauri/sentinel-db/src/: client.rs  database_service.rs  lib.rs
src-tauri/sentinel-license/: Cargo.toml
src-tauri/sentinel-license/src/: anti_debug.rs  crypto.rs  integrity.rs  lib.rs  machine_id.rs  obfuscate.rs  storage.rs  validator.rs
src-tauri/sentinel-llm/: Cargo.toml
src-tauri/sentinel-llm/src/: agent.rs  client.rs  config.rs  lib.rs  log.rs  message.rs  service.rs  streaming.rs  types.rs  usage.rs
src-tauri/sentinel-memory/: Cargo.toml
src-tauri/sentinel-memory/src/: lib.rs
src-tauri/sentinel-notify/: Cargo.toml
src-tauri/sentinel-notify/src/: lib.rs
src-tauri/sentinel-passive/: Cargo.toml
src-tauri/sentinel-passive/docs/: COMPRESSION_HANDLING.md  COMPRESSION_QUICK_REF.md
src-tauri/sentinel-passive/examples/: test_db_init.rs
src-tauri/sentinel-passive/src/: certificate.rs  certificate_authority.rs  database.rs  error.rs  history_cache.rs  lib.rs  packet_capture.rs  proxy.rs  scanner.rs  types.rs
src-tauri/sentinel-passive/tests/: test_body_capture.rs  test_compression.rs
src-tauri/sentinel-plugins/: Cargo.toml  ESM_PLUGIN_GUIDE.md  ROBUSTNESS_TEST_SUMMARY.md  STRESS_TEST_SUMMARY.md  run_stress_tests.sh
src-tauri/sentinel-plugins/docs/: EXECUTOR_VS_ENGINE.md  EXECUTOR_WITH_RESTART_DESIGN.md  README.md  (+8 more)
src-tauri/sentinel-prompt/: Cargo.toml
src-tauri/sentinel-rag/: Cargo.toml
src-tauri/sentinel-services/: Cargo.toml
src-tauri/sentinel-tools/: CTF_TOOLS.md  Cargo.toml  DOCKER_SANDBOX_USAGE.md  DOCKER_TROUBLESHOOTING.md  Dockerfile.sandbox  Dockerfile.sandbox.kali-full  Dockerfile.sandbox.minimal  INTERACTIVE_TERMINAL.md  INTERACTIVE_TERMINAL_EXAMPLES.md  KALI_DOCKER_README.md  README.md
src-tauri/sentinel-traffic/: Cargo.toml
src-tauri/sentinel-workflow/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/templates/: vulnerability_report.html
src-tauri/tests/: vision_explorer_v2_tests.rs
(+1500 files in other folders)
