[package]
name = "sentinel-ai"
version = "0.1.0"
description = "AI+MCP漏洞挖掘应用"
authors = ["you"]
edition = "2021"
default-run = "sentinel-ai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sentinel_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace members
sentinel-core = { path = "sentinel-core" }
sentinel-db = { path = "sentinel-db" }
sentinel-prompt = { path = "sentinel-prompt" }
sentinel-rag = { path = "sentinel-rag" }
sentinel-memory = { path = "sentinel-memory" }
sentinel-tools = { path = "sentinel-tools" }
sentinel-services = { path = "sentinel-services" }
sentinel-workflow = { path = "sentinel-workflow" }
sentinel-traffic = { path = "sentinel-traffic" }
sentinel-notify = { path = "sentinel-notify" }
sentinel-llm = { path = "sentinel-llm" }
sentinel-license = { path = "sentinel-license" }
sentinel-plugins = { path = "sentinel-plugins" }
sentinel-bounty = { path = "sentinel-bounty" }

html2text = "0.15.5"
urlencoding = "2.1.3"


# Tauri 核心依赖
tauri = { version = "2.7.0", features = [
    "devtools",
    "protocol-asset",
    "tray-icon",
] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2.5.1"
tauri-plugin-shell = "2"


futures-util = "0.3"
# LRU 缓存 (用于 Travel Token优化)
lru = "0.12"

rustscan = "2.4.1"
petgraph = "0.6"

# MCP协议支持 - 使用官方Rust SDK，启用所有新特性
rmcp = { workspace = true }

# RAG and Vector Database
lancedb = "0.23.1"

# Document parsing
docx-rs = "0.4.17"
pdf-extract = "0.7.9"
pulldown-cmark = "0.12.0"
walkdir = "2.5.0"

# 数据库支持
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }

# HTTP 客户端配置
# 强制 rustls 使用 ring 而不是 aws-lc-rs，以减少 Windows 编译负担
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
http = "1"

# SSE客户端支持
eventsource-client = "0.12"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# 日志
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 目录路径
dirs = "5.0"

# 异步trait支持
async-trait = "0.1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# TLS 支持
native-tls = "0.2"
tokio-native-tls = "0.3"

# UUID生成
uuid = { version = "1", features = ["v4", "serde"] }

# 任何错误处理
anyhow = "1.0"

# TOML配置文件解析
toml = "0.8"
thiserror = "1.0"

# 随机数生成
rand = "0.8"

# 正则表达式
regex = "1"

# once_cell 用于全局单例
once_cell = "1.19"

# 异步操作
futures = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 额外的 AI 相关依赖
base64 = "0.22"
url = "2.4"
derive_more = { version = "2.0.1", features = ["full"] }
md5 = "0.7"
sha2 = "0.10"

tera = "1.20"
flate2 = "1.0"

# Plan B: AI插件生成依赖
deno_core = "0.368.0"
deno_ast = { version = "0.51.0", features = ["transpiling"] }

# 网络扫描工具依赖
# 子域名扫描相关
trust-dns-resolver = "0.23"
hickory-resolver = "0.25.2"

# 端口扫描相关
tokio-util = { version = "0.7", features = ["net"] }
net2 = "0.2"
socket2 = "0.5"

# 网络工具
ping = "0.5"
cidr = "0.2"
ipnet = "2.9"

# 并发控制
semaphore = "0.4.0"
tokio-stream = "0.1"

# 命令行工具集成
which = "8.0.0"
tempfile = "3.8"

# HTTP 探测
headers = "0.4"
mime = "0.3"
tauri-plugin-fs = "2"
rsubdomain = "1.2.6"

# 文件系统监控
notify = "6.1"
fastrand = "2.3.0"

rig-core = { version = "0.30.0", features = ["derive"] }
rig-lancedb = "0.2.33"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"


# 针对非 Windows 平台使用 rustls
[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "socks",
    "rustls-tls",
    "rustls-tls-native-roots",
    "cookies",
] }

# 针对 Windows 平台使用 native-tls (避免 aws-lc-rs 编译失败)
[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "socks",
    "native-tls",
    "cookies",
] }


[target.'cfg(unix)'.dependencies]
libc = "0.2"
# 信号处理 (仅限Unix)
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[profile.dev]
# 开发环境优化 
opt-level = 0
debug = 0               # 完全禁用调试信息
split-debuginfo = "unpacked" # macOS上使用unpacked通常更快

# Windows 特定开发配置 - 避免 PDB 限制问题
[profile.dev.package."*"]
debug = 0

[profile.release]
panic = "abort"   # 在发布版本中遇到panic时中止
codegen-units = 16 # 并行编译以加快构建速度 (was 1)
lto = "thin"      # 启用 ThinLTO，构建速度更快 (was true)
opt-level = "s"   # 优化代码大小
strip = true      # 从二进制文件中剥离符号信息


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[workspace]
members = [
    "sentinel-core",
    "sentinel-db",
    "sentinel-prompt",
    "sentinel-rag",
    "sentinel-memory",
    "sentinel-tools",
    "sentinel-traffic",
    "sentinel-plugins",
    "sentinel-notify",
    "sentinel-workflow",
    "sentinel-llm",
    "sentinel-license",
    "sentinel-bounty",
]
resolver = "2"


[workspace.dependencies]
tempfile = "3.8"
rmcp = { version = "0.9.1", features = [
    "client",
    "server",
    "macros",
    "transport-async-rw",
    "transport-child-process",
    "transport-sse-client",
    "transport-sse-server",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "reqwest",
    "auth",
    "uuid",
    "base64",
] }
rig-core = { version = "0.30.0", features = ["derive"] }
rig-lancedb = "0.2.33"
