[package]
name = "sentinel-commands"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_commands"
path = "src/lib.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-db = { path = "../sentinel-db" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-rag = { path = "../sentinel-rag" }
sentinel-services = { path = "../sentinel-services" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri = { version = "2.7.0", default-features = false }


