[package]
name = "sentinel-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
md5 = "0.8.0"

# For global proxy support
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync"] }
once_cell = "1.20"


