[package]
name = "sentinel-db"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_db"
path = "src/lib.rs"

[features]
default = ["db-sqlite"]
db-sqlite = ["sqlx/sqlite", "sentinel-core/db-sqlite", "sentinel-plugins/db-sqlite"]
db-postgres = ["sqlx/postgres", "sentinel-core/db-postgres", "sentinel-plugins/db-postgres"]
db-mysql = ["sqlx/mysql", "sentinel-core/db-mysql", "sentinel-plugins/db-mysql"]

[dependencies]
sentinel-core = { path = "../sentinel-core", default-features = false }
sentinel-rag = { path = "../sentinel-rag" }
sentinel-plugins = { path = "../sentinel-plugins", default-features = false }
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "derive",
    "macros",
    "any",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
dirs = "5.0"
regex = "1.12.2"
log = "0.4.28"
sha2 = "0.10"
base64 = "0.22.1"
flate2 = "1.1.5"
