[package]
name = "sentinel-llm"
version = "0.1.0"
edition = "2021"
description = "统一 LLM 客户端库，提供多轮对话、流式响应、图片支持等功能"

[lib]
name = "sentinel_llm"
path = "src/lib.rs"

[dependencies]
# 核心依赖
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# 异步
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4"] }

# rig AI 框架
rig-core = { workspace = true }

# HTTP 客户端（用于自定义请求头）
reqwest = { version = "0.12", features = ["json"] }

# Tools (for native tool calling)
sentinel-tools = { path = "../sentinel-tools" }
