[package]
name = "sentinel-notify"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_notify"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.0", features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "builder", "smtp-transport", "tokio1-rustls-tls"] }
urlencoding = "2.1.3"
