[package]
name = "sentinel-passive"
version = "0.1.0"
edition = "2021"
description = "被动扫描代理、插件引擎与流量分析 - Sentinel AI"
authors = ["you"]

[dependencies]
# 内部依赖
sentinel-plugins = { path = "../sentinel-plugins" }

# 代理与证书
hudsucker = "0.24"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
x509-parser = "0.16"

# Deno 插件引擎（已移至 sentinel-plugins）
# deno_core = "0.365.0"

# 模板引擎（HTML 报告）
tera = "1.20"

# 压缩支持
flate2 = "1.0"
brotli = "7.0"

reqwest = "0.12"

# HTTP
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 编码（用于二进制数据）
base64 = "0.22"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
log = "0.4"

# Tauri (用于事件发送)
tauri = "2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# 正则
regex = "1"

# 哈希
sha2 = "0.10"
hex = "0.4"

# 目录
dirs = "5.0"

# 并发
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# URL 解析
url = "2"

 # 随机数，用于序列号等
 rand = "0.8"
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
