[package]
name = "sentinel-plugins"
version = "0.1.0"
edition = "2021"
description = "Built-in security scanning plugins for Sentinel AI passive scanner"
authors = ["Sentinel AI Team"]

[dependencies]
# Deno Core for plugin execution
deno_core = "0.376.0"
deno_ast = { version = "0.51.0", features = ["transpiling"] }
deno_error = "0.7.0"

# Deno Web Extensions (Web APIs)
deno_webidl = "0.223.0"
deno_web = "0.254.0"
deno_fetch = "0.247.0"

anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
