[package]
name = "sentinel-plugins"
version = "0.1.0"
edition = "2021"
description = "Built-in security scanning plugins for Sentinel AI traffic scanner"
authors = ["Sentinel AI Team"]

[dependencies]
# Sentinel core for proxy support
sentinel-core = { path = "../sentinel-core" }

# Deno Core and extensions for plugin execution
# Using deno_core 0.373.0 for stability, file system via custom ops
deno_core = "0.373.0"
deno_ast = { version = "0.51.0", features = ["transpiling"] }
deno_error = "0.7.0"
deno_features = "0.20.0"
deno_net = "0.215.0"
deno_permissions = "0.82.0"
deno_crypto = "0.237.0"

# Deno extensions for native Web APIs (TextEncoder, URL, console, Headers, etc.)
deno_webidl = "0.223.0"
deno_web = "0.254.0"

anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sys_traits = { version = "0.1.17", features = ["real", "libc"] }

# HTTP client
[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.12", features = ["json", "native-tls"] }

[dev-dependencies]
sysinfo = "0.30"
num_cpus = "1.0"
