[package]
name = "sentinel-prompt"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_prompt"
path = "src/lib.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
notify = "6.1"
once_cell = "1.19"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"