[package]
name = "sentinel-rag"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_rag"
path = "src/lib.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }

anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for embeddings
reqwest = { version = "0.12", features = ["json"] }

# Additional dependencies
md5 = "0.7"
rand = "0.9"
log = "0.4"
dirs = "5.0"

rig-core = { version = "0.31.0", default-features = false, features = ["derive", "reqwest-native-tls"] }
rig-sqlite = "0.1.34"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
regex = "1.11"
pulldown-cmark = "0.12"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
