[package]
name = "sentinel-workflow"
version = "0.1.0"
edition = "2021"
description = "Workflow engine and utilities for Sentinel"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
log = "0.4"

