[package]
name = "sentinel-workflow"
version = "0.1.0"
edition = "2021"
description = "Workflow engine and utilities for Sentinel"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
log = "0.4"
tauri = { version = "2.7.0", features = [] }
sentinel-db = { path = "../sentinel-db" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-prompt = { path = "../sentinel-prompt" }
sentinel-rag = { path = "../sentinel-rag" }
sentinel-notify = { path = "../sentinel-notify" }
sentinel-llm = { path = "../sentinel-llm" }
tracing = "0.1"
futures = "0.3"
tokio-util = "0.7"
async-trait = "0.1"
