[package]
name = "sentinel-agents"
version = "0.1.0"
edition = "2021"
description = "Agent management system for Sentinel AI"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-database = { path = "../sentinel-database" }
sentinel-models = { path = "../sentinel-models" }
sentinel-services = { path = "../sentinel-services" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-engines = { path = "../sentinel-engines" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
