[package]
name = "sentinel-ai"
version = "0.1.0"
description = "AI+MCP漏洞挖掘应用"
authors = ["you"]
edition = "2021"
default-run = "sentinel-ai"

[lib]
name = "sentinel_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal crates
sentinel-core = { path = "../sentinel-core" }
sentinel-database = { path = "../sentinel-database" }
sentinel-models = { path = "../sentinel-models" }
sentinel-services = { path = "../sentinel-services" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-rag = { path = "../sentinel-rag" }
sentinel-engines = { path = "../sentinel-engines" }
sentinel-agents = { path = "../sentinel-agents" }
sentinel-prompt = { path = "../sentinel-prompt" }
sentinel-commands = { path = "../sentinel-commands" }

# Tauri dependencies
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = { workspace = true }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }

# Signal handling
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }

# Additional utilities
html2text = { workspace = true }
urlencoding = { workspace = true }
notify = { workspace = true }
fastrand = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
