[package]
name = "sentinel-commands"
version = "0.1.0"
edition = "2021"
description = "Tauri command handlers for Sentinel AI"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-database = { path = "../sentinel-database" }
sentinel-models = { path = "../sentinel-models" }
sentinel-services = { path = "../sentinel-services" }
sentinel-tools = { path = "../sentinel-tools" }
sentinel-rag = { path = "../sentinel-rag" }
sentinel-engines = { path = "../sentinel-engines" }
sentinel-agents = { path = "../sentinel-agents" }
sentinel-prompt = { path = "../sentinel-prompt" }

tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
