[package]
name = "sentinel-engines"
version = "0.1.0"
edition = "2021"
description = "AI execution engines for Sentinel AI"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-models = { path = "../sentinel-models" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
