[package]
name = "sentinel-models"
version = "0.1.0"
edition = "2021"
description = "Data models for Sentinel AI"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
derive_more = { workspace = true }
